@@ -1,3 +1,8 @@
+11 April 2019: Wouter
+	- Fix that auth zone uses correct network type for sockets for
+	  SOA serial probes.  This fixes that probes fail because earlier
+	  probe addresses are unreachable.
+
 8 April 2019: Wouter
 	- Fix to use event_assign with libevent for thread-safety.
 	- verbose information about auth zone lookup process, also lookup
